infrastructure/cluster-setup/configs/ambassador/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-systems-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: infrastructure-ambassador
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 80
